# redeyecpp

./: .gitignore  .gitmodules  LICENSE  README.md  TAGS
img/: CMakeLists.txt
include/: httplib.h  mjpeg_streamer.hpp  nlohmann
re/: CMakeLists.txt  cmd.cpp  config.cpp  config.hpp  main.cpp  mjpg.cpp  mjpg.hpp  mqtt.cpp  mqtt.hpp  net.hpp  player.cpp  player.hpp  video.cpp  video.hpp  web.cpp
src/: CMakeLists.txt  buffers.cpp  camera.cpp  camera.hpp  cameras.cpp  cmd.cpp  config.cpp  config.hpp  event.cpp  event.hpp  event_queue.cpp  event_queue.hpp  image.cpp  image.hpp  imgsrc.hpp  main.cpp  mqtt.cpp  net.cpp  net.hpp  player.cpp  player.hpp  tegra.hpp  video.cpp  video.hpp  web-old.cpp  web.cpp
src/filters/: filter.cpp  filter_bigger.cpp  filter_bigger.hpp  filter_contour.cpp  filter_default.cpp  filter_face_detect.cpp  filter_face_detect.hpp  filter_magnify.cpp  filter_magnify.hpp  filters.cpp  filters.hpp
vid/: CMakeLists.txt  config.cpp  config.hpp  display.cpp  display.hpp  externs.hpp  filter.cpp  filter.hpp  filter_bigger.hpp  filter_contour.cpp  filter_contour.hpp  filter_default.hpp  filter_magnify.cpp  filter_magnify.hpp  filters.cpp  image.cpp  image.hpp  main.cpp  player.cpp  player.hpp  vid.cpp  vid.hpp  video.cpp  video.hpp  win.hpp
vid/filters/: CMakeLists.txt  filter.cpp  filter.hpp  filter_bigger.cpp  filter_default.cpp  filter_face_detect.cpp  filter_face_detect.hpp  filters.cpp
www/: index.html
